--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "serwist": "^9.5.6",
-    "tailwind-merge": "^3.5.0"
+    "tailwind-merge": "^3.5.0",
+    "vercel": "^50.22.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
